[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
clearscreen = "2.0.0"
rand = "0.8.4"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"